--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.0-rc.1",
+    "axios": "^1.7.9",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
+    "tailwindcss-primeui": "^0.4.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -19,9 +24,12 @@
     "@eslint/js": "^9.20.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.5.1",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
