--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.0-rc.1",
+    "@primevue/forms": "^4.3.1",
     "axios": "^1.7.9",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
-    "primevue": "^4.2.5",
+    "primevue": "^4.3.1",
     "tailwindcss-primeui": "^0.4.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
