--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
     "prettier": "^3.5.1",
     "tailwindcss": "^3.4.1",
