--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@primeuix/themes": "^1.0.0-rc.1",
     "@primevue/forms": "^4.3.1",
     "aos": "^2.3.4",
-    "axios": "^1.7.9",
+    "axios": "^1.8.3",
+    "esbuild": "^0.25.1",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
