--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/", 
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -21,7 +22,6 @@
     "@primevue/forms": "^4.3.1",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
-    "esbuild": "^0.25.1",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
@@ -34,14 +34,19 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "autoprefixer": "^10.4.17",
+    "esbuild": "^0.24.0",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "gh-pages": "^6.3.0",
+    "npm-force-resolutions": "^0.0.10",
     "postcss": "^8.4.35",
     "prettier": "^3.5.1",
     "sass": "^1.85.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^6.1.0",
+    "vite": "^6.2.2",
     "vite-plugin-vue-devtools": "^7.7.2"
-  }
+  }, 
+  "resolutions": {
+  "esbuild": "0.25.0"
+}
 }
